{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 78,
  "lineage": "9b571001-4cd7-7b1b-e177-393d7fc1cbe2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:security-group/sg-054c07523bd43f158",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054c07523bd43f158",
            "ingress": [
              {
                "cidr_blocks": [
                  "123.45.67.89/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-default-sg",
            "name_prefix": "",
            "owner_id": "703288805108",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a992b4721a9c50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "sg-054c07523bd43f158",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be2650f38c97e086",
            "arn": "arn:aws:ec2:eu-central-1:703288805108:elastic-ip/eipalloc-0be2650f38c97e086",
            "association_id": "eipassoc-0de3368721d8ec480",
            "domain": "vpc",
            "id": "eipalloc-0be2650f38c97e086",
            "instance": "i-00ab9ff314580b47b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-035fc0239205fd3df",
            "private_dns": "ip-10-0-0-238.eu-central-1.compute.internal",
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-3-124-219-135.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.219.135",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_sg",
            "module.app_ec2.aws_instance.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.app_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e872aee57663ae2d",
            "arn": "arn:aws:ec2:eu-central-1:703288805108:instance/i-00ab9ff314580b47b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "myapp-default",
            "id": "i-00ab9ff314580b47b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-035fc0239205fd3df"
              }
            ],
            "primary_network_interface_id": "eni-035fc0239205fd3df",
            "private_dns": "ip-10-0-0-238.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.238",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0396817d94fe63d90",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d0e3f1e40eb3aaf",
            "tags": {
              "Env": "dev",
              "Name": "App EC2",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "App EC2",
              "Project": "myapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054c07523bd43f158"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "i-00ab9ff314580b47b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:internet-gateway/igw-0177480d8196cf527",
            "id": "igw-0177480d8196cf527",
            "owner_id": "703288805108",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "myapp-default-igw",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "myapp-default-igw",
              "Project": "myapp"
            },
            "vpc_id": "vpc-092a992b4721a9c50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:route-table/rtb-028fafbd85089b5dc",
            "id": "rtb-028fafbd85089b5dc",
            "owner_id": "703288805108",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0177480d8196cf527",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "myapp-default-public-rt",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "myapp-default-public-rt",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-092a992b4721a9c50"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "rtb-028fafbd85089b5dc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f660c16c194a8e8",
            "region": "eu-central-1",
            "route_table_id": "rtb-028fafbd85089b5dc",
            "subnet_id": "subnet-08d0e3f1e40eb3aaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f18db0dae738fa1b",
            "region": "eu-central-1",
            "route_table_id": "rtb-028fafbd85089b5dc",
            "subnet_id": "subnet-0cba1afd1fba9e838"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "eu-central-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04962d9fc58d11574",
            "region": "eu-central-1",
            "route_table_id": "rtb-028fafbd85089b5dc",
            "subnet_id": "subnet-099ecf3a768002a5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:subnet/subnet-08d0e3f1e40eb3aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d0e3f1e40eb3aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703288805108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "myapp-default-public-eu-central-1a",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "myapp-default-public-eu-central-1a",
              "Project": "myapp"
            },
            "vpc_id": "vpc-092a992b4721a9c50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "subnet-08d0e3f1e40eb3aaf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:subnet/subnet-0cba1afd1fba9e838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cba1afd1fba9e838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703288805108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "myapp-default-public-eu-central-1b",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "myapp-default-public-eu-central-1b",
              "Project": "myapp"
            },
            "vpc_id": "vpc-092a992b4721a9c50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "subnet-0cba1afd1fba9e838",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "eu-central-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:subnet/subnet-099ecf3a768002a5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ecf3a768002a5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703288805108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "myapp-default-public-eu-central-1c",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "myapp-default-public-eu-central-1c",
              "Project": "myapp"
            },
            "vpc_id": "vpc-092a992b4721a9c50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "subnet-099ecf3a768002a5b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703288805108:vpc/vpc-092a992b4721a9c50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b2bed800c6d3819",
            "default_route_table_id": "rtb-0d7f8c30265d6e1f2",
            "default_security_group_id": "sg-01e73449444383f32",
            "dhcp_options_id": "dopt-0f57bef3e96393ace",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092a992b4721a9c50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7f8c30265d6e1f2",
            "owner_id": "703288805108",
            "region": "eu-central-1",
            "tags": {
              "Env": "dev",
              "Name": "myapp-default",
              "Project": "myapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "myapp-default",
              "Project": "myapp"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "703288805108",
            "id": "vpc-092a992b4721a9c50",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}